--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient-mono {
+  @apply font-mono tracking-tighter text-transparent bg-clip-text bg-gradient-to-r from-custom-aqua to-custom-yellow
+}
+
+.link {
+  @apply font-bold underline decoration-pink-500 decoration-2 dark:text-gray-200
+}
+
+.card {
+  @apply bg-custom-black p-4 md:p-6 rounded-xl
+}
+
+.custom-checkbox {
+  @apply h-4 w-4 rounded border-gray-300 focus:border-custom-aqua focus:ring-2 focus:ring-custom-aqua focus:ring-opacity-50 text-custom-yellow disabled:text-gray-500
+}
